--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@apollo/client": "3.6.6",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
-    "graphql": "^15.8.0",
+    "graphql": "16.5.0",
     "react": "18.0.0",
     "react-native": "0.69.5"
   },
